# utest.h

./: .clang-format  .clang-tidy  .codespellrc  .cppcheck-suppressions  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/: install-rules.cmake  lint-targets.cmake  lint.cmake  utestConfig.cmake  variables.cmake
cmake/modules/: utest_add_tests.cmake  utest_discover_tests.cmake
include/: utest.h
test/: CMakeLists.txt  main.c  subprocess.h  test.c  test.cpp  test11.c  test11.cpp  test99.c  type_printers.inc
